# Auto_Bangumi

./: .dockerignore  .env  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  .pylintrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  PROJECT_ANALYSIS.md  README.md  SECURITY.md  build-frontend.sh  build.ps1  build.sh  components.d.ts  config.json  dev.sh  entrypoint.sh  entrypoint.sh.backup  index.html  main.py  mian.py  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  rename.py  rename.sh  rename_hash.py  rename_qb.py  requirements.txt  rss_ruleset.sh  rule_set.py  (+8 more)
backend/: .pre-commit-config.yaml  alembic.ini  dev.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.claude/: claude.md  mp.md
backend/scripts/: benchmark_tokenizer.py  pip-lock-version.sh
backend/src/: Untitled  ab_update_pubkey.pem  boot_overlay.py  dev_server.py  main.py  requirements.txt  test_passkey_server.py  version.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 001_baseline_old_schema.py  002_migrate_to_new_schema.py
backend/src/api/: __init__.py  main.py
backend/src/api/routes/: auth.py  bangumi.py  config.py  log.py  program.py  response.py  rss.py  search.py  torrent.py
backend/src/conf/: __init__.py  config.py  const.py.bak  search_provider.py
backend/src/core/: aiocore.py  program.py  status.py  task_manager.py
backend/src/core/monitors/: __init__.py  download_check.py  download_monitor.py  notification_monitor.py  rename_monitor.py
backend/src/core/services/: base_services.py  download_service.py  renamer_service.py  rss_service.py
backend/src/log/: __init__.py
backend/src/models/: __init__.py  bangumi.py  config.py  mikan.py  response.py  rss.py  tmdb.py  torrent.py  user.py
backend/src/module/: __init__.py  __version__.py  composition.py
backend/src/module/ab_decorator/: __init__.py  timeout.py
backend/src/module/api/: __init__.py  auth.py  bangumi.py  config.py  deps.py  download.py  downloader.py  events.py  health.py  llm.py  log.py  movie.py  notification.py  passkey.py  program.py  proxy.py  response.py  rss.py  search.py  setup.py  tokens.py  torrent.py  update.py  users.py  web.py
backend/src/module/application/: __init__.py  auth.py
backend/src/module/checker/: __init__.py  checker.py
backend/src/module/conf/: __init__.py  config.py  const.py  log.py  search_provider.py  tmdb.py
backend/src/module/core/: __init__.py  aiocore.py  context.py  events.py  loops.py  offset_scanner.py  program.py  renamer_service.py  rss_feed.py  scheduler.py  service_registry.py  services.py  status.py  sub_thread.py  task_manager.py  task_queue.py
backend/src/module/database/: __init__.py  aria2.py  auth.py  bangumi.py  combine.py  connector.py  database_version.py  database_version.py.bak  engine.py  inbox.py  llm_credential.py  migration.py  migrations.py  movie.py  passkey.py  rename_operation.py  rss.py  torrent.py  user.py
backend/src/module/downloader/: __init__.py  base.py  config.py  download_client.py  download_controller.py  download_monitor.py  download_queue.py  exceptions.py  old_download_client.py  path.py  rules.py
backend/src/module/exceptions/: __init__.py  auth.py  base.py  network.py  parser.py
backend/src/module/llm_plugins/: __init__.py  installer.py  loader.py
backend/src/module/manager/: __init__.py  bangumi.py  collector.py  rename_monitor.py  renamer.py  revision_policy.py  status.py  template_renderer.py  torrent.py  trgger.py
backend/src/module/mcp/: __init__.py  resources.py  runtime.py  security.py  server.py  tools.py
backend/src/module/models/: __init__.py  api.py  aria2.py  auth.py  bangumi.py  config.py  database_version.py  inbox.py  llm_credential.py  movie.py  passkey.py  rename_operation.py  response.py  rss.py  tmdb.py  torrent.py  user.py
backend/src/module/network/: __init__.py  cache.py  proxy.py  request_contents.py  request_url.py
backend/src/module/notification/: README.md  __init__.py  base.py  config.py  events.py  inbox.py  manager.py  notification.py  notification_monitor.py
backend/src/module/parser/: __init__.py  meta_parser.py  mikan_parser.py  openai.py  parser_config.py  patterns.py  release_policy.py  title_parser.py  tmdb.py  torrent_parser.py
backend/src/module/plugin/: __init__.py  load.py  manager.py  manger.py  model.py
backend/src/module/ports/: __init__.py  auth.py
backend/src/module/rename/: __init__.py  renamer.py  template_renderer.py
backend/src/module/rss/: __init__.py  analyser.py  engine.py  engine_old.py  filter.py  manager.py  poller.py  pool.py  pool.py.bak  searcher.py
backend/src/module/searcher/: __init__.py  mikan.py  provider.py  searcher.py
backend/src/module/security/: api.py  auth_strategy.py  ip_allowlist.py  jwt.py  webauthn.py
backend/src/module/update/: __init__.py  auth.py  cross_version.py  data_migration.py  docker_updater.py  (+6 more)
backend/src/test/: __init__.py  conftest.py  factories.py  test_api_auth.py  test_api_bangumi.py  test_api_bangumi_extended.py  test_api_bangumi_torrents.py  test_api_config.py  test_api_downloader.py  test_api_events.py  test_api_health.py  test_api_llm.py  test_api_log.py  test_api_notification_inbox.py  test_api_passkey.py  test_api_program.py  test_api_rss.py  test_api_search.py  test_api_users.py  test_aria2_downloader.py  test_auth.py  test_auth_persistence.py  test_auth_service_transactions.py  test_bangumi_database.py  test_cache_image.py  test_checker.py  test_collector.py  test_conf_log.py  test_config.py  test_context.py  test_database.py  test_database_inbox.py  test_database_llm_credential.py  test_database_rename_operation.py  test_dedup_priority.py  test_download_client.py  test_download_session_reuse.py  test_downloader_protocol.py  test_e2e_fixture_generation.py  test_e2e_runtime_support_contract.py  (+64 more)
backend/src/tests/: test_analyser.py  test_bangumi_database.py  test_database.py  test_mikan_parser.py  test_renamer.py  test_rss_database.py  test_rss_engine.py  test_tmdb_parser.py  test_torrent_database.py
(+1230 files in other folders)
